# woogle-maps

./: .gitattributes  .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  Google Colab Preview.ipynb  README.md  codecov.yaml  gz_extract.py  main.py  mypy.ini  pyproject.toml  requirements.txt  ruff.toml  split_woogle_dump_per_dossier.py
.github/: CODEOWNERS  dependabot.yml
.github/workflows/: codecov.yaml  pre-commit.yaml  publish-docs.yaml  unit-tests.yaml
.gitlab/merge_request_templates/: default.md
conf/: gz_extract.yaml  main.yaml  split_woogle_dump_per_dossier.yaml
dashapp/: __init__.py  app.py  conf.py  generate_graph_elements.py
dashapp/pages/: __init__.py  home.py  map.py
data/raw/: nl.gm0867.2i.2023.11.pkl
docs/: bibliography.bib  conf.py  index.rst  readme_link.rst  requirements.txt
docs/_static/: logo.css
docs/pages/: how_it_works.rst  limitations.rst  readme_link.rst  usage.rst  woogle_dump.rst
notebooks/: WoogleDocumentation.py  __init__.py  compute_topical_similarity.py  create_embeddings.py  deep walk notebook.ipynb  extract_lexrank.py  extract_lines.py  extract_lines_LLM.py  extract_lines_corpus.py  extract_lines_embed.py  extract_lines_t5.py  pdf_to_text.py  preprocess_dossier.py  preprocessing.py  roberta_embedding.py  woogle_eda.ipynb  woogle_eda.py
src/: __init__.py  load_data.py
src/logging/: __init__.py  logger.py
src/pipeline/: __init__.py  setup_pipeline.py  verbose_transformation_pipeline.py
src/preprocessing/: __init__.py  cluster_documents.py  cluster_explainer.py  compute_layout.py  compute_topical_distributions.py  create_events.py  extract_dates_regex.py  extract_important_sentences.py  filter_redundant_edges.py  find_storylines.py  generate_roberta_embedding.py  impute_dates.py  linear_programming.py  pdf_to_text.py  random_walk_embedding.py
src/utils/: __init__.py  construct_graph.py  convert_rustworkx.py  fix_dtypes.py
tests/: __init__.py
tests/dashapp/: __init__.py
tests/preprocessing/: __init__.py  test_compute_layout.py  test_extract_dates.py  test_extract_sentences.py  test_filter_redundant_edges.py  test_find_storylines.py  test_impute_dates.py  test_pdf_to_text.py  test_random_walk_embedding.py  utils.py
tests/utils/: test_convert_rustworkx.py
tm/: lda_model_v3  lda_model_v3.expElogbeta.npy  lda_model_v3.id2word  lda_model_v3.state
