[tool.poetry]
name = "woogle-maps"
version = "0.1.0"
description = "Woogle Maps is a tool for structuring documents in multiple clear storylines, visualizing the relationships between them."
authors = [
    "Jeffrey Lim <Jeffrey-Lim@outlook.com>",
    "Gregoire Dumont <Dumont.Gregoire.A@gmail.com>",
    "Kristóf Sándor <Emherk512@gmail.com>",
    "Daniel De Dios Allegue <DanielDeDiosAllegue@gmail.com>",
]
license = "MIT"
readme = "README.md"
homepage = "https://teamepoch.ai/"
repository = "https://github.com/TeamEpochGithub/woogle-maps/"
documentation = "https://TeamEpochGithub.github.io/woogle-maps/"
classifiers = [
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3 :: Only",
    "License :: OSI Approved :: MIT License",
    "Typing :: Typed",
    "Operating System :: OS Independent",
]
packages = [
    { include = "src" },
    { include = "main.py" },
    { include = "gz_extract.py" },
    { include = "split_woogle_dump_per_dossier.py" },
    { include = "dashapp" },
]

[tool.poetry.dependencies]
python = "^3.12"
numpy = "^1.26.4"
seaborn = "^0.13.2"
yake = "^0.4.8"
nltk = "^3.8.1"
dash = "^2.17.1"
dash-extensions = "^1.0.17"
dash-cytoscape = "^1.0.1"
hydra-core = "^1.3.2"
tqdm = "^4.66.2"
fastparquet = "^2024.5.0"
transformers = {extras = ["torch"], version = "^4.42.3"}
sentence-transformers = "^3.0.1"
lexrank = "^0.1.0"
pandas = {extras = ["performance"], version = "^2.2.1"}
pyarrow = "^16.0.0"
epochalyst = "^0.3.7"
hdbscan = "^0.8.37"
dask = {extras = ["dataframe"], version = "^2024.6.2"}
notebook = "^7.2.1"
dash-mantine-components = "~0.12.1"
dash-iconify = "^0.1.2"
rustworkx = "^0.15.1"
polars = "^1.0.0"
gensim = "^4.3.2"
pypdf = {extras = ["full"], version = "^4.1.0"}
scikit-learn = "^1.5.0"
pulp = "^2.8.0"
umap-learn = "^0.5.6"
scipy = "~1.14.0"
randomname = "^0.2.1"
flask = "^3.0.3"
networkx = "^3.3"

[tool.poetry.group.test]

[tool.poetry.group.test.dependencies]
pre-commit = "^3.6.2"
pytest = "^8.2.2"
pytest-cov = "^5.0.0"
reportlab = "^4.2.2"

[tool.poetry.group.docs]

[tool.poetry.group.docs.dependencies]
sphinx = "^7.3.7"
sphinx-autodoc-typehints = "^2.2.2"
sphinxawesome-theme = "^5.2.0"
myst-parser = "^3.0.1"
pygit2 = "^1.15.0"
sphinxcontrib-bibtex = "^2.6.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pydoclint]
style = "sphinx"
arg-type-hints-in-docstring = false
arg-type-hints-in-signature = true
skip-checking-short-docstrings = false
check-return-types = false
show-filenames-in-every-violation-message = true
ignore = [
    "DOC103",  # Docstring arguments are different from function arguments. Too often a false positive.
]
